fix: improve readability of Support Center (Zendesk) pages

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -30,6 +30,10 @@ $tablet-width: 768px;
 $desktop-width: 1024px;
 $max-width-container: 1160px;
 
+// Fonts
+$font-weight-base: 400;
+$font-weight-light: 300;
+$font-weight-normal: 500;
 $font-weight-semibold: 600;
 
 // Transitions
